--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v13.0"
         nonce="jd3W9oKn"></script>
 
-    <header><img src="/ASM2/a/images/header.jpg" alt=""></header>
+    <header><img src="header.jpg" alt=""></header>
     <br>
     <iframe
         src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=450&layout=standard&action=like&size=large&share=true&height=35&appId"
